# Kimera-VIO-ROS2

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  kimera.repos  ros_entrypoint.sh  underlay.repos  underlay.sh
src/vio/: CMakeLists.txt  colcon.pkg  package.xml
src/vio/include/: RosUtils.h  vio.h
src/vio/include/vio/: RosDataProvider.h  vio.h
src/vio/resources/: vio.yaml
src/vio/src/: RosDataProvider.cpp  RosUtils.cpp  vio.cpp  vio_node.cpp
