<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vio</name>
  <version>0.0.0</version>
  <description>
  A ROS2 implementation of Kimera-vio designed to run in a docker container
  </description>
  <maintainer email="andrej.janda@gmail.com">ros</maintainer>
  <license>BSD 2-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <!-- <depend>cv_bridge</depend> -->
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
